--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,10 +17,11 @@
     "katex": "^0.16.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdf": "^9.1.1",
     "react-router-dom": "^6.26.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sqlite3": "^5.1.7",
-    "typescript": "^4.9.5",
+    "typescript": "^3.9.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@types/katex": "^0.16.7"
+    "@types/katex": "^0.16.7",
+    "@types/react-pdf": "^7.0.0"
   }
 }
