--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "npx npm-force-resolutions && npx patch-package"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +52,13 @@
   },
   "devDependencies": {
     "@types/katex": "^0.16.7",
-    "@types/react-pdf": "^7.0.0"
+    "@types/react-pdf": "^7.0.0",
+    "npm-force-resolutions": "^0.0.10",
+    "patch-package": "^8.0.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
+  },
+  "resolutions": {
+    "nth-check": "2.0.1",
+    "postcss": "8.4.31"
   }
 }
