With keywords and compiling errors solved

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "newsletter-frontend",
   "version": "0.1.0",
+  "hasInstallScript": true,
   "private": true,
   "dependencies": {
     "@react-pdf/renderer": "^3.4.5",
