Arreglado package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "newsletter-frontend",
   "version": "0.1.0",
-  "hasInstallScript": true,
   "private": true,
   "dependencies": {
     "@react-pdf/renderer": "^3.4.5",
@@ -30,8 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "npx npm-force-resolutions && npx patch-package"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -53,13 +51,6 @@
   },
   "devDependencies": {
     "@types/katex": "^0.16.7",
-    "@types/react-pdf": "^7.0.0",
-    "npm-force-resolutions": "^0.0.10",
-    "patch-package": "^8.0.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
-  },
-  "resolutions": {
-    "nth-check": "2.0.1",
-    "postcss": "8.4.31"
+    "@types/react-pdf": "^7.0.0"
   }
 }
