--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/katex": "^0.16.7",
     "@types/react-pdf": "^7.0.0"
   }
